# django-emailuser

./: .gitignore  CHANGELOG.rst  LICENCE  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
django_emailuser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
email_user/: admin.py  app.py  apps.py  models.py  serializers.py
email_user/migrations/: 0001_initial.py
email_user/tests/: __init__.py  factories.py  test_models.py  test_serializers.py
src/email_user/: admin.py  conf.py  fields.py  models.py  serializers.py  version.py
src/email_user/migrations/: 0002_auto_20221120_2055.py
src/email_user/tests/: factories.py  settings.py  test_email_case.py  test_models.py  test_serializer.py
