[metadata]
name = django-emailuser
url = https://github.com/eugenma/django-emailuser
description = A simple Django app with users identified by email instead of username.
long_description = file: README.rst 
author = Eugen Massini
author_email = eugen.massini@gmail.com
license = BSD License
classifiers = 
        Environment :: Web Environment
        Framework :: Django
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Internet :: WWW/HTTP
        Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = 
    Django>=3.0
tests_require = 
    dateutil
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
drf = 
    djangorestframework >= 3.10
